fix overflowing sidebar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 
 html {
   background-color: #FAFAFF;
+  height: 100%;
 }
 
 #content-wrapper {
