--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -64,3 +64,9 @@
 .has-medium-text {
   color: $medium;
 }
+
+.hero {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  height: 100%;
+}
